--- a/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
@@ -931,6 +931,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a th:href="'/Lab/admin/Lesson?username='+${#authentication.name}">
+                                    <i class="metismenu-icon pe-7s-bookmarks">
+                                    </i>DM Bài thí nghiệm
+                                </a>
+                            </li>
+                            <li>
                                 <a href="#">
                                     <i class="metismenu-icon pe-7s-timer">
                                     </i>DM Thiết bị
