--- a/Lab_Management.v1/src/main/resources/templates/admin/booking-management.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/booking-management.html
@@ -135,19 +135,29 @@
                         </td>
                         <td th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/WaitComfirmUsed')}" >
                             <div class="d-flex justify-content-center align-content-center flex-row p-2">
-                                <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get"
+                                <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="post"
+                                      enctype="multipart/form-data"
+                                      class="d-flex flex-column justify-content-center align-content-center"
                                       th:if="${booking.comfirmUsed == 'Chưa sử dụng'}">
+                                    <input class="form-control fileInput mx-2" type="file" name="file"
+                                           style="max-width: 10em"
+                                           accept=".xlsx, .xls, .doc, .docx, .ppt, .pptx" onchange="enableImportButton(this)">
                                     <input type="hidden" name="bookingId" th:value="${booking.getId}">
                                     <input type="hidden" name="username" th:value="${#authentication.name}">
-                                    <button type="submit" class="btn btn-success mx-2" onclick="return confirm('Bạn có chắc chắn muốn SỬ DỤNG không?')">Dùng</button>
+                                    <button type="submit" disabled class="btn btn-success m-2" onclick="return confirm('Bạn có chắc chắn muốn SỬ DỤNG không?')">Dùng</button>
                                 </form>
                                 <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get"
+                                      class="d-flex justify-content-center align-content-center"
                                       th:if="${booking.comfirmUsed == 'Chưa sử dụng'}">
                                     <input type="hidden" name="bookingId" th:value="${booking.getId}">
                                     <input type="hidden" name="username" th:value="${#authentication.name}">
                                     <button type="submit" class="btn btn-danger mx-2" onclick="return confirm('Bạn có chắc chắn muốn HỦY không?')">Hủy</button>
                                 </form>
-                                <span class="text-success font-weight-bold" th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> GV đã xác nhận <br> sử dụng phòng</span>
+                                <div class="d-flex justify-content-center align-content-center flex-column">
+                                    <span class="text-success font-weight-bold" th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> GV đã xác nhận sử dụng phòng</span>
+                                    <a class="font-weight-bold" th:href="'/Lab/admin/LabBookingManagement/ComfirmUsed/download/'+${booking.getId}"
+                                       th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> <span>Tải xuống báo cáo</span></a>
+                                </div>
                                 <span class="text-danger font-weight-bold" th:if="${booking.comfirmUsed == 'Đã hủy'}"> GV Đã xác nhận <br> hủy phòng</span>
                             </div>
                         </td>
