Done Lesson Management

--- a/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
@@ -1257,6 +1257,16 @@
 
 
                                                 <!--/////////////////////////////////-->
+                                                            <!--  Lesson  -->
+                                                <!--/////////////////////////////////-->
+
+                <div th:if="${#strings.contains(#request.requestURI, 'Lab/admin/Lesson')}" class="app-main__inner">
+                    <div th:replace="admin/lesson-management.html :: lesson-management"></div>
+                </div>
+
+
+
+                                                <!--/////////////////////////////////-->
                                                             <!--  Eror  -->
                                                 <!--/////////////////////////////////-->
 
