--- a/Lab_Management.v1/src/main/resources/templates/booking/my-booking.html
+++ b/Lab_Management.v1/src/main/resources/templates/booking/my-booking.html
@@ -167,19 +167,23 @@
                         </div>
                     </td>
                     <td>
-                        <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get" class="m-2"
+                        <!--<form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get" class="m-2"
                               th:if="${booking.comfirmUsed == 'Chưa sử dụng'}">
                             <input type="hidden" name="bookingId" th:value="${booking.getId}">
                             <input type="hidden" name="username" th:value="${#authentication.name}">
                             <button type="submit" class="btn btn-success mx-2" onclick="return confirm('Bạn có chắc chắn muốn SỬ DỤNG không?')">Dùng</button>
-                        </form>
+                        </form>-->
                         <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get" class="m-2"
                               th:if="${booking.comfirmUsed == 'Chưa sử dụng'}">
                             <input type="hidden" name="bookingId" th:value="${booking.getId}">
                             <input type="hidden" name="username" th:value="${#authentication.name}">
                             <button type="submit" class="btn btn-danger mx-2" onclick="return confirm('Bạn có chắc chắn muốn HỦY không?')">Hủy</button>
                         </form>
-                        <span class="text-success font-weight-bold" th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> Bạn đã xác nhận <br> sử dụng phòng</span>
+                        <div class="d-flex justify-content-center align-content-center flex-column">
+                            <span class="text-success font-weight-bold" th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> Đã sử dụng </span>
+                            <a class="font-weight-bold" th:href="'/Lab/myBookingDetail/ComfirmUsed/download/'+${booking.getId}"
+                               th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> <span>Tải xuống báo cáo</span></a>
+                        </div>
                         <span class="text-danger font-weight-bold" th:if="${booking.comfirmUsed == 'Đã hủy'}"> Bạn Đã xác nhận <br> hủy phòng</span>
                     </td>
                     <td>
